@@ -24,5 +24,6 @@
 	<string id="30059">Nejstarší</string>
 	<string id="30060">Nejlepší</string>
 	<string id="30061">Nejsledovanější</string>
+	<string id="30070">Podobná videa</string>
 	<string id="31000">Data o použití jsou zaslána pouze v okamžiku, kdy spustíte přehrávání nebo stahování videa doplňkem.</string>
 </strings>
