@@ -25,5 +25,6 @@
 	<string id="30059">Oldest</string>
 	<string id="30060">Best</string>
 	<string id="30061">Most watched</string>
+	<string id="30070">Related videos</string>
 	<string id="31000">Usage of plugin is tracked whenever you play or download video.</string>
 </strings>
