@@ -24,5 +24,6 @@
 	<string id="30059">Najstaršie</string>
 	<string id="30060">Najlepšie</string>
 	<string id="30061">Najsledovanejšie</string>
+	<string id="30070">Podobné videá</string>
 	<string id="31000">Dáta o použití sú zasláné len v okamžiku, keď spustíte prehrávánie alebo sťahovanie videa doplnkom.</string>
 </strings>
