@@ -1,2 +1,5 @@
+[B]1.0.3:[/B]
+- added date listing
+- added related videos listing to context menu
 [B]1.0.0:[/B]
 Initial version
